--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,73 @@
 html {
     scroll-behavior: smooth;
 }
+
+.main-header {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+}
+
+/* INPUT CHECKBOX STYLE */
+#menu-button {
+    display: none;
+}
+
+#menu-button:checked~.nav {
+    transform: translate(0%);
+}
+
+/* HAMBURGER AND LABEL STYLES */
+.menu-container {
+    width: 1rem;
+    height: 15px;
+    padding-block-start: 0.4rem;
+}
+
+.menu-container .hamburger,
+.hamburger::before,
+.hamburger::after {
+    width: 100%;
+    height: 3px;
+    background: var(--clr-accent);
+    display: block;
+    cursor: pointer;
+}
+
+.hamburger {
+    position: relative;
+    z-index: 1000;
+    right: 0;
+}
+
+.hamburger::before,
+.hamburger::after {
+    content: "";
+    position: absolute;
+}
+
+.hamburger::before {
+    margin-top: -6px;
+}
+
+.hamburger::after {
+    margin-top: 6px;
+}
+
+.main-header {
+    justify-content: space-between;
+}
+
+.nav {
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    transform: translateX(100%);
+    transition: transform 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    /* transition has -delay, -duration, -property, -timing-function. it must have 2 compulsory which is duration and function */
+}
