--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,114 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    background-color: var(--clr-light);
+    color: var(--clr-dark);
+    margin: 0;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
+}
+
+section {
+    padding: 5em 2em;
+}
+
+img {
+    display: block;
+    min-width: 100%;
+    margin: auto;
+}
+
+strong {
+    font-weight: var(--fw-bold);
+}
+
+strong:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 0.5em 1.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    letter-spacing: 0.5em;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+/* TYPOGRAPHY:TEXT ELEMENT */
+h1,
+h2,
+h3 {
+    line-height: 1;
+    margin: 0;
+}
+
+h1 {
+    font-size: var(--fs-h1);
+}
+
+h2 {
+    font-size: var(--fs-h2);
+}
+
+h3 {
+    font-size: var(--fs-h3);
+}
+
+.section__title {
+    margin-bottom: 0.25em;
+}
+
+.section__title--intro {
+    font-weight: var(--fw-reg);
+}
+
+/* CHECK DESENDANT */
+.section__title--intro>strong {
+    display: block;
+}
+
+.section__subtitle {
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+    background-color: var(--clr-accent);
+    font-family: var(--ff-secondary);
+    margin-bottom: 1em;
+    padding: 0.25em 1em;
+}
+
+.section__subtitle--work {
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+}
+
+
+/* MAIN HEADER */
 .main-header {
     display: flex;
     align-items: center;
     padding: 1rem;
+}
+
+.logo {
+    min-width: 100px;
 }
 
 /* INPUT CHECKBOX STYLE */
@@ -114,4 +218,11 @@ html {
     transform: translateX(100%);
     transition: transform 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
     /* transition has -delay, -duration, -property, -timing-function. it must have 2 compulsory which is duration and function */
+}
+
+.nav__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
